Minor bugs to be fixed. Alpha phase finished. The structure works properly, next up is documentation

--- a/README
+++ b/README
@@ -14,6 +14,9 @@ developed for GNU/Linux.
 
 To compile it, a Makefile has been attached.
 
+Please note, that the given source code is now on the Beta Testing phase. If you
+find any bugs, please notify me (:
+
 LICENSE
 =======
 
