--- a/README
+++ b/README
@@ -17,6 +17,9 @@ To compile it, a Makefile has been attached.
 Please note, that the given source code is now on the Beta Testing phase. If you
 find any bugs, please notify me (:
 
+The current version is 0.1. The main aim of this version is have a robust and fully
+functional tree structure. Speed optimizations will be implemented on version 0.2.
+
 LICENSE
 =======
 
