--- a/README
+++ b/README
@@ -10,7 +10,7 @@ GENERAL NOTES
 =============
 
 This project implements a Tree template in C++. The current version is being  
-developed for GNU/Linux. 
+developed for GNU/Linux.
 
 To compile it, a Makefile has been attached.
 
@@ -20,8 +20,8 @@ find any bugs, please notify me (:
 The current version is 0.1. The main aim of this version is have a robust and 
 fully functional tree structure, mainly for pedagogical purposes. 
 
-Version 0.2 will implement speed optimizations and template simplification. The
-development will be stopped for sometime now at least until summer 2012.
+Version 0.2 will implement speed optimizations and template simplification. I 
+will try to get this new version up and going by September 2012.
 
 LICENSE
 =======
